--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
 
+    <string name="restaurant_name">Name:</string>
+    <string name="restaurant_genre">Genre:</string>
+    <string name="restaurant_rating">Rating:</string>
+    <string name="restaurant_notes">Notes:</string>
+
 </resources>
