ui cleanup of restaurant list fragment

--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -16,9 +16,12 @@
     <string name="restaurant_rating">Rating:</string>
     <string name="restaurant_notes">Notes:</string>
 
+    <string name="menu_add_restaurant">Add Restaurant</string>
     <string name="menu_delete_all_restaurants">Delete All</string>
 
     <string name="dialog_delete_all_restaurants_title">Delete All Restaurants?</string>
     <string name="dialog_delete_all_restaurants_message">Are you sure you want to delete all your saved restaurants?</string>
+
+    <string name="empty_listview_restaurants">Touch + in the menu bar to add a restaurant</string>
 
 </resources>
