--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -20,17 +20,21 @@
     <string name="restaurant_selector_filter">Filter:</string>
     <string name="restaurant_selector_button">Where should I eat?</string>
     <string name="restaurant_selector_button_pick_another">Screw that. Pick another one!</string>
-    <string name="restaurant_number_visits">Number of visits:</string>
-    <string name="restaurant_last_time_visited">Last time visited:</string>
+    <string name="restaurant_number_visits">Number of visits: </string>
+    <string name="restaurant_last_time_visited">Last time visited: </string>
     <string name="restaurant_answer_header">And the answer is&#8230;</string>
 
     <string name="menu_add_restaurant">Add Restaurant</string>
     <string name="menu_delete_all_restaurants">Delete All</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_clear_restaurant_history">Clear History</string>
 
     <string name="dialog_delete_all_restaurants_title">Delete All Restaurants?</string>
     <string name="dialog_delete_all_restaurants_message">Are you sure you want to delete all your saved restaurants?</string>
     <string name="dialog_delete_restaurant_title">Delete Restaurant?</string>
     <string name="dialog_delete_restaurant_message">Are you sure you want to delete this restaurant?</string>
+    <string name="dialog_delete_history_title">Clear History?</string>
+    <string name="dialog_delete_history_message">Are you sure you want to clear your restaurant selection history?</string>
 
     <string name="empty_listview_restaurants">Touch + in the menu bar to add a restaurant</string>
 
