--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="restaurant_genre">Genre:</string>
     <string name="restaurant_rating">Rating:</string>
     <string name="restaurant_notes">Notes:</string>
-    <string name="restaurant_selector_filter">Filter:</string>
+    <string name="restaurant_selector_filter">Filter by:</string>
     <string name="restaurant_selector_button">Where should I eat?</string>
     <string name="restaurant_selector_button_pick_another">Screw that. Pick another one!</string>
     <string name="restaurant_number_visits">Number of visits: </string>
