--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_section3">Section 3</string>
     <string name="title_restaurant_list">All Restaurants</string>
     <string name="title_restaurant_selector">Pick A Restaurant</string>
+    <string name="title_edit_restaurant">Edit Restaurant</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
