--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -2,9 +2,6 @@
 <resources>
 
     <string name="app_name">Restaurant Roulette</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
     <string name="title_restaurant_list">Restaurant List</string>
     <string name="title_restaurant_selector">Pick A Restaurant</string>
     <string name="title_edit_restaurant">Edit Restaurant</string>
@@ -32,13 +29,19 @@
     <string name="menu_delete_all_restaurants">Delete All</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_clear_restaurant_history">Clear History</string>
+    <string name="menu_help">Help</string>
 
+    <string name="btn_confirm">Ok, got it</string>
     <string name="dialog_delete_all_restaurants_title">Delete All Restaurants?</string>
     <string name="dialog_delete_all_restaurants_message">Are you sure you want to delete all your saved restaurants?</string>
     <string name="dialog_delete_restaurant_title">Delete Restaurant?</string>
     <string name="dialog_delete_restaurant_message">Are you sure you want to delete this restaurant?</string>
     <string name="dialog_delete_history_title">Clear History?</string>
     <string name="dialog_delete_history_message">Are you sure you want to clear your restaurant selection history?</string>
+    <string name="dialog_restaurant_selector_help">Touch \"Where should I eat\" to pick a random restaurant from your list. You can filter by genre if you\'re in the mood for something specific.\n\nYou can pick another one if you don\'t like the suggestion&#8230; although that kind of defeats the purpose, no?\n\nTouch \"Get Directions\" to open Google Maps and find a nearby location.</string>
+    <string name="dialog_restaurant_list_help">This is a list of all your restaurants. Touch one to view more details, or touch + to add a new one.</string>
+    <string name="dialog_restaurant_history_help">This is a list of all the restaurants that have been picked for you.\n\nOh, the memories.</string>
+    <string name="dialog_edit_restaurant_help">This screen lets you edit the details of any restaurant. Go ahead and change the name, genre, rating or price level. You can even add notes to help you remember things.\n\nTouch \"Get Directions\" to open Google Maps and find a nearby location.</string>
 
     <string name="empty_listview_restaurants">Touch + in the menu bar to add a restaurant</string>
     <string name="empty_listview_history">Your restaurant history is empty</string>
