--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="all_restaurants">All Restaurants</string>
+    <string name="email_subject">Restaurant Roulette Question</string>
+    <string name="email_body">Your app is awesome!!  But&#8230;\n\n</string>
 
     <string name="restaurant_name">Name:</string>
     <string name="restaurant_genre">Genre:</string>
@@ -53,6 +55,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="menu_settings">Settings</string>
     <string name="menu_clear_restaurant_history">Clear History</string>
     <string name="menu_help">Help</string>
+    <string name="menu_email_developer">E-mail Developer</string>
 
     <string name="btn_confirm">Ok, got it</string>
     <string name="dialog_delete_all_restaurants_title">Delete All Restaurants?</string>
