--- a/Restaurant Roulette/src/main/res/values/strings.xml
+++ b/Restaurant Roulette/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="menu_clear_restaurant_history">Clear History</string>
     <string name="menu_help">Help</string>
     <string name="menu_email_developer">E-mail Developer</string>
+    <string name="menu_rate_app">Rate App</string>
 
     <string name="btn_confirm">Ok, got it</string>
     <string name="dialog_delete_all_restaurants_title">Delete All Restaurants?</string>
@@ -76,5 +77,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="toast_no_restaurant_name">Please enter a name for the restaurant before searching</string>
     <string name="toast_no_maps_app">Sorry, you do not have a mapping application installed</string>
     <string name="toast_location_unavailable">Oops, we had trouble getting your current location</string>
+    <string name="toast_google_play_error">Unable to open the Google Play store</string>
 
 </resources>
